--- a/src/global/styles/foundation/_colorswatch.scss
+++ b/src/global/styles/foundation/_colorswatch.scss
@@ -4,10 +4,12 @@ $default-white: #fff;
 
 // brand colors
 $offwhite: #f7f7f7;
-$black: #2a2e2f;
+$black: #000000;
 $yellow: #ffb100;
 $coral: #f26555;
 $teal: #017a84;
+$green: #273f2e;
+$brown: #38322f;
 
 :root {
     --default-black: #000;
@@ -15,7 +17,7 @@ $teal: #017a84;
 
     // brand colors
     --offwhite: #f7f7f7;
-    --black: #2a2e2f;
+    --black: #000000;
     --yellow: #ffb100;
     --coral: #f26555;
     --teal: #017a84;
