--- a/src/global/styles/foundation/_theme.scss
+++ b/src/global/styles/foundation/_theme.scss
@@ -62,6 +62,7 @@ body {
         right: 0;
         bottom: 0;
         border: 1rem solid $white;
+        z-index: 100;
         @media (max-width: $fablet) {
             border: 0.5rem solid $white;
         }
@@ -90,4 +91,10 @@ a {
 
 .modal-open {
     overflow: hidden;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
 }
