--- a/src/components/ThreeKings/ThreeKings.module.scss
+++ b/src/components/ThreeKings/ThreeKings.module.scss
@@ -1,6 +1,12 @@
 @import '../../global/styles/utils/mixins';
 
 .threeKings {
+    &:empty {
+        min-height: 90vh;
+        @include loading-spinner-base();
+        @include rotate-animation();
+    }
+
     background: var(--brand-offwhite);
     padding: var(--section-padding);
     position: relative;
@@ -13,10 +19,7 @@
     }
     
     h2 {
-        font-size: 2.4rem;
-        text-transform: lowercase;
-        font-family: var(--serif);
-        margin-bottom: 2rem;
+        @include page-heading();
         
         span {
             color: var(--brand-one);
