--- a/src/global/styles/utils/_mixins.scss
+++ b/src/global/styles/utils/_mixins.scss
@@ -43,17 +43,19 @@
     writing-mode: vertical-rl;
     letter-spacing: 0.8rem;
     font-size: 0.8rem;
-    opacity: 0.4;
 }
 
 @mixin btn-primary($background: var(--brand-one), $hoverText: var(--brand-black)) {
     display: inline-block;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-family: var(--serif);
-    font-style: italic;
-    padding: 1rem;
+    padding: 1rem 2rem;
     position: relative;
     z-index: 0;
+    border: 2px solid $background;
+    text-transform: lowercase;
+    font-weight: bold;
+    color: var(--brand-black);
     @include transition(0.15s, ease-out);
 
     &:after {
@@ -63,7 +65,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 2px;
+        height: 0px;
         background: $background;
         @include transition(0.15s, ease-out);
         z-index: -10;
@@ -78,6 +80,7 @@
     }
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
         font-family: $serif;
+
         &:after {
             background: black;
         }
@@ -92,15 +95,19 @@
     margin: 2rem 0 8rem;
 }
 
-@mixin page-heading($decorative-period: true) {
-    font-size: 2.4rem;
+@mixin page-heading($decorative-period: true, $font-size: 5rem) {
+    font-size: $font-size;
+    line-height: 1;
+    font-family: var(--sans-serif);
     text-transform: lowercase;
+
     @media (max-width: $tablet) {
-        font-size: 2rem;
+        font-size: 3rem;
     }
+
     @if $decorative-period {
         &:after {
-            content: ' .';
+            content: '.';
             color: var(--brand-one);
         }
     }
@@ -111,7 +118,39 @@
     padding-top: 10rem;
     padding-bottom: 10rem;
     
+    h1,
     h2 {
         @include page-heading();
+    }
+}
+
+@mixin loading-spinner-base() {
+    position: relative;
+    
+    &:after {
+        width: 100px;
+        height: 50px; /* as the half of the width */
+        border-top-left-radius: 100px;
+        border-top-right-radius: 100px;
+        border: 0.3rem solid var(--brand-one);
+        border-bottom: 0;
+        box-sizing: border-box;
+        position: absolute;
+        top: -20vh;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        content: '';
+        animation: rotate-animation 0.6s linear infinite;
+        transform-origin: 50% 100%;
+    }
+}
+
+@mixin rotate-animation() {
+    @keyframes rotate-animation {
+        100% {
+            transform: rotate(360deg);
+        }
     }
 }
