--- a/src/components/CategoryFilters/CategoryFilters.module.scss
+++ b/src/components/CategoryFilters/CategoryFilters.module.scss
@@ -1,9 +1,11 @@
 @import '../../global/styles/foundation/breakpoints';
+@import '../../global/styles/foundation/typography';
 
 .filterContainer {
 
     li {
         display: inline-block;
+        font-family: $serif;
         font-family: var(--serif);
         font-size: 0.9rem;
         font-style: italic;
