--- a/src/global/styles/utils/_mixins.scss
+++ b/src/global/styles/utils/_mixins.scss
@@ -98,6 +98,7 @@
 @mixin page-heading($decorative-period: true, $font-size: 5rem) {
     font-size: $font-size;
     line-height: 1;
+    font-family: $sans-serif;
     font-family: var(--sans-serif);
     text-transform: lowercase;
 
