--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -81,6 +81,7 @@
 
 .button {
     @include btn-primary();
+    text-align: center;
     @media (max-width: $tablet) {
         margin-top: 1rem;
     }
