--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -72,6 +72,7 @@
         width: 100%;
         text-transform: lowercase;
         transition: all 0.1s ease-in-out;
+        text-decoration: underline;
 
         @media(max-width: $desktop-small) {
             padding: 0.5rem;
@@ -109,59 +110,156 @@
         background: #f2f2f2;
         background: var(--brand-offwhite);
     }
-
-    &:not(:last-of-type) {
-        margin-bottom: 1rem;
-    }
 }
 
 .container {
     @include grid();
-    @include container(1200px);
+    @include container(1600px);
     padding: 11rem 1rem;
     align-content: stretch;
+
+    @media(max-width: $tablet) {
+        padding: 8rem 1rem;
+    }
 }
 
 .serviceMainContent {
-    grid-column: 1/8;
+    grid-column: 1/7;
+    @media (max-width: $desktop-large) {
+        grid-column: 1/-1;
+    }
+    div {display: grid;}
 
     @media(max-width: $tablet) {
         grid-column: 1/-1;
     }
 
-    h3 {
-        font-size: 3.4rem;
+    p, h4 {
+        line-height: 1.5;
+        margin-bottom: 1.4rem;
+    }
+
+    .title {
+        font-size: 1rem;
         line-height: 1;
-        text-transform: lowercase;
         margin-bottom: 2rem;
         font-family: var(--sans-serif);
-        font-weight: bold;
-
+        font-weight: 400;
+        letter-spacing: 0.5px;
+        color: var(--brand-black);
+        background: var(--bg);
+        display: inline-block;
+        padding: 0.6rem;
+        
         @media(max-width: $tablet) {
             text-align: center;
-            font-size: 1.8rem;
-        }
-
-        span {
-            color: var(--brand-black) !important;
         }
     }
 
-    p:first-of-type {
-        font-family: var(--serif);
-        font-size: 1.2rem;
-        font-style: italic;
-        margin: 2rem auto;
+    .primaryContent {
+        p:first-of-type {
+            font-family: var(--serif);
+            font-size: 2rem;
+            margin: 2rem 0;
+    
+            @media(max-width: $desktop-large) {
+                font-size: 1.8rem;
+                max-width: 800px;
+            }
+
+            @media(max-width: $tablet) {
+                font-size: 1.2rem;
+                margin-top: 1rem;
+            }
+        }
     }
+
     strong {
         font-size: 0.8rem;
         font-family: var(--serif);
         font-style: italic;
         display: block;
-        margin-top: 3rem;
+        margin-top: 1rem;
         max-width: 500px;
         font-weight: bold;
     }
+
+    p a {
+        text-decoration: underline;
+    }
+
+    ul {
+        li {
+            list-style: circle; 
+            margin-left: 1rem; 
+            margin-bottom: 0.5rem;
+        }
+    }
+}
+
+.includes {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 4rem;
+    grid-gap: 2rem;
+
+    @media (max-width: $tablet) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: $fablet) {
+        grid-gap: 2rem 1rem;
+    }
+    
+
+    h3 {
+        font-size: 1.6rem;
+        align-self: center;
+        font-family: var(--sans-serif);
+        line-height: 1.2;
+        grid-column: 1/-1;
+
+        @media (max-width: $fablet) {
+            font-size: 1.4rem;
+        }
+    }
+
+    li {
+        list-style: none;
+    }
+
+    p {
+        font-size: 0.9rem;
+        margin-top: 1rem;
+    }
+
+    p {
+        font-family: var(--serif);
+
+        @media (max-width: $fablet) {
+            font-size: 0.8rem;
+        }
+    }
+
+    h4 {
+        font-family: var(--sans-serif);
+        letter-spacing: 1.5px;
+        font-size: 0.9rem;
+        text-transform: uppercase;
+        font-weight: 400;
+        display: block;
+        position: relative;
+        padding-bottom: 1rem;
+        
+        &:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 1rem;
+            height: 2px;
+            background: var(--bg);
+        }
+    }  
 }
 
 .introImg {
@@ -181,7 +279,7 @@
         right: 0;
         margin: auto;
         width: 9rem;
-        top: -6rem;
+        top: -4rem;
     }
 }
 
@@ -190,56 +288,14 @@
     width: 100%;
     height: auto;
     opacity: 0.2;
+    display: block;
+    grid-column: 1/-1;
+    display: none;
 
     @media(max-width: $tablet) {
         text-align: center;
         display: block;
         margin: 0 auto;
-    }
-}
-
-.sidebar {
-    grid-column: 10/-1;
-    font-family: var(--serif);
-
-    @media(max-width: $desktop-small) {
-        grid-column: 9/-1;
-    }
-    @media(max-width: $tablet) {
-        display: none;
-    }
-
-    p {
-        font-weight: bold;
-    }
-
-    ul {
-        margin: 1rem auto;
-        font-size: 0.8rem;
-
-        p {
-            margin-top: 2rem;
-            font-size: 0.9rem;
-
-            &.italics {
-                font-size: 0.7rem;
-            }
-        }
-
-        ul {
-            list-style: disc;
-            margin-left: 1rem;
-            li {
-                margin: 0.4rem auto;
-                font-size: 0.9rem;
-                font-style: italic;
-            }
-        }
-    }
-
-    em {
-        font-size: 0.7rem;
-        font-style: italic;
     }
 }
 
@@ -251,16 +307,19 @@
         text-align: center;
         display: block;
         margin: 4rem auto 0;
-        width: 12rem;
+    }
+
+    @media (max-width: $fablet) {
+        width: 100%;
     }
 }
 
 .imageContainer {
-    width: 4rem;
-    width: clamp(1rem, 4vw, 100px);
+
+    width: 46%;
+    max-width: 900px;
     position: absolute;
-    height: 100%;
-    border-right: 0.3rem solid var(--bg);
+    right: 0;
     overflow: hidden;
 
     p {
@@ -273,12 +332,11 @@
     }
 
     img {
-        transform: translateX(-9%);
-        height: 100%;
-        width: auto;
+        width: 100%;
     }
 
     @media (max-width: $desktop-large) {
+        display: none;
         width: 100%;
         height: 12rem;
         border-right: none;
@@ -300,10 +358,6 @@
 
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .sidebar {
-        display: none;
-    }
-
     .serviceItemContainer {        
         &:nth-child(even) {
             background: #f7f7f7;
