adding accessibility and notification bar

--- a/src/components/CategoryFilters/CategoryFilters.module.scss
+++ b/src/components/CategoryFilters/CategoryFilters.module.scss
@@ -27,7 +27,8 @@
         
 
         @media(min-width: $desktop-small) {
-            &:hover {
+            &:hover, 
+            &:focus {
                 text-decoration: underline;
             }
         }
